[API] update basic authen
