# src/v1/authen/routes.ts
@@ -1,14 +1,15 @@
 import { Router, Request, Response } from "express";
 import { IResponse, ISuccessResponse } from "../utils/common.type";
-import { IUserSignIn, IUserSignUp, ISignInResponse, ISignOutResponse } from "./authen.type";
+import { IUserSignIn, IUserSignUp, ISignInResponse, ISignOutResponse, IStatusToken } from "./authen.type";
+import { auth } from "../middleware/authen";
+import { Controller } from "./controllers";
 
 const router = Router();
-// let user = new Controller();
+let authen = new Controller();
 
 router.post("/signup", async (req: Request, res: Response) => {
   const newUser: IUserSignUp = req.body;
-  // let result: IResponse | ISuccessResponse = await user.addUser(newUser);
-  let result: ISuccessResponse = { message: 'Successfully signup' };
+  let result: IResponse | ISuccessResponse = await authen.signUp(newUser);
   if (result.hasOwnProperty('error')){
     if (result.error === 'Duplicated username') res.status(400).send(result);
     else res.status(500).send(result);
@@ -18,8 +19,7 @@ router.post("/signup", async (req: Request, res: Response) => {
 
 router.post("/signin", async (req: Request, res: Response) => {
   const signinUser: IUserSignIn = req.body;
-  // let result: IResponse | ISuccessResponse = await user.addUser(signinUser);
-  let result: ISignInResponse = { access_token: 'test', refresh_token: 'test' };
+  let result: IResponse | ISignInResponse = await authen.signIn(signinUser);
   if (result.hasOwnProperty('error')){
     if (result.error === 'Invalid username or password') res.status(400).send(result);
     else res.status(500).send(result);
@@ -27,11 +27,11 @@ router.post("/signin", async (req: Request, res: Response) => {
   else res.status(200).send(result);
 });
 
-router.post("/signout", async (req: Request, res: Response) => {
+router.post("/signout", auth, async (req: Request, res: Response) => {
   // use access token
-  // const signinUser: IUserSignIn = req.body;
-  // let result: IResponse | ISuccessResponse = await user.addUser(signinUser);
-  let result: ISignOutResponse = { message: 'signout' };
+  // const signoutUser: IUserSignIn = req.body;
+  let result: IResponse | ISignOutResponse = await authen.signOut(req);
+  // let result: ISignOutResponse = { message: 'signout' };
   if (result.hasOwnProperty('error')){
     if (result.error === 'Invalid username or password') res.status(400).send(result);
     else res.status(500).send(result);
@@ -39,9 +39,9 @@ router.post("/signout", async (req: Request, res: Response) => {
   else res.status(200).send(result);
 });
 
-router.get("/token/status", async (req: Request, res: Response) => {
-  // let result: IResponse | ISuccessResponse = await user.addUser(signinUser);
-  let result: IResponse | ISuccessResponse = { message: 'ok' };
+router.get("/status/token", auth, async (req: Request, res: Response) => {
+  let result: IResponse | IStatusToken = await authen.getTokenStatus(req);
+  // let result: IResponse | ISuccessResponse = { message: 'ok' };
   if (result.hasOwnProperty('error')){
     if (result.hasOwnProperty('message')) res.status(404).send(result);
     else res.status(500).send(result);
